[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astro-mock"
version = "0.1.0"
description = "CLI tool that generates mock Docker services and Airflow connections for local Astro CLI development"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.83.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "catalog", "utils"]

[project.scripts]
astro-mock = "agent.cli:main"
